--- a/test/test.html
+++ b/test/test.html
@@ -14,8 +14,8 @@
 </div>
 <br><br>
 <p align="center"><input type="button" value="Purchase" style="width:10%" onclick="purchase()"></p>
-<script src="jquery-1.7.2.min.js"></script>
-<script src="maxiPago-1.1.js"></script>
+<script src="../lib/jquery-1.7.2.min.js"></script>
+<script src="../lib/maxiPago-1.1.js"></script>
 <script>
 function purchase() {
 	var transaction = {
